Fix struct type hasTypeEquality, standardize typechecker error messages